apps/sdk-backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdk-backend
spec:
  selector:
    app: sdk-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
